--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -33,9 +33,8 @@
         </li>
       </ul>
 
-
       <!-- Info del usuario en dropdown: imagen + nombre + apellido -->
-      <div class="dropdown" *ngIf = "rol">
+      <div class="dropdown" *ngIf="rol">
         <button
           class="btn btn-primary dropdown-toggle d-flex align-items-center gap-2"
           type="button"
@@ -58,3 +57,6 @@
           </li>
         </ul>
       </div>
+    </div>
+  </div>
+</nav>
