--- a/FrontEnd/SysAcad/src/app/auth/login/login.component.html
+++ b/FrontEnd/SysAcad/src/app/auth/login/login.component.html
@@ -12,9 +12,7 @@
         <!-- Campo para ingresar el usuario -->
         <div class="form-group w-75 mb-3">
           <label for="usuario" class="form-label">Usuario</label>
-          <input
-            type="text"
-            id="usuario"
+          <input type="text" id="usuario"
             class="form-control"
             placeholder="Ingresa tu usuario"
             [(ngModel)]="usuario"
