--- a/FrontEnd/SysAcad/src/app/components/administrador/Alum/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/Alum/add-update-alumno/add-update-alumno.component.html
@@ -43,6 +43,11 @@
             <label for="usuario" class="form-label">Usuario:</label>
             <input formControlName="usuario" type="text" id="usuario" class="form-control">
           </div>
+          <!-- Campo: Contraseña -->
+          <div class="mb-2">
+            <label for="password" class="form-label">Contraseña:</label>
+            <input formControlName="password" type="password" id="password" class="form-control">
+          </div>
           <!-- Campo: Plan -->
           <div class="d-flex justify-content-center align-items-center mt-2 mb-2">
             <label for="plan" class="form-label mr-2">Plan:</label>
