--- a/FrontEnd/SysAcad/src/app/auth/login/login.component.html
+++ b/FrontEnd/SysAcad/src/app/auth/login/login.component.html
@@ -51,7 +51,7 @@
         </div>
 
         <!-- Botón para enviar el formulario -->
-        <button type="submit" class="btn btn-light btn-sm w-50">Iniciar Sesión</button>
+        <button type="submit" class="btn btn-light btn-sm w-50" id = "iniciarSesion" >Iniciar Sesión</button>
       </form>
     </div>
   </div>
