fix test front e2e

--- a/FrontEnd/SysAcad/src/app/components/administrador/Mat/materias/materias.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/Mat/materias/materias.component.html
@@ -5,7 +5,7 @@
     <div class="d-flex justify-content-between align-items-center card-header p-2 flex-wrap">
       <h4 class="m-0" style="font-size: 1.2rem;">Listado de Materias</h4>
       <!-- Botón para agregar una nueva materia -->
-      <button type="button" class="btn btn-light btn-sm mt-2 mt-md-0" (click)="goadd()">Agregar Materia</button>
+      <button type="button" class="btn btn-light btn-sm mt-2 mt-md-0" (click)="goadd()" id = "btnAgregarMateria" >Agregar Materia</button>
     </div>
 
     <!-- Mensaje de error -->
