--- a/FrontEnd/SysAcad/src/app/components/administrador/busqueda/resultado/resultado.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/busqueda/resultado/resultado.component.html
@@ -44,8 +44,8 @@
       <div class="d-flex justify-content-between mt-3">
         <button class="btn btn-secondary" (click)="goBack()">Volver</button>
         <div>
-          <button (click)="editarAlumno(alumno?.id)" class="btn btn-light">Editar</button>
-          <button (click)="verInscripciones(alumno?.id)" class="btn btn-light ml-2">Ver inscripciones</button>
+          <button (click)="editarAlumno(alumno.id)" class="btn btn-light">Editar</button>
+          <button (click)="verInscripciones(alumno.id)" class="btn btn-light ml-2">Ver inscripciones</button>
         </div>
       </div>
     </div>
