--- a/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/SysAcad/src/app/components/navbar/navbar.component.html
@@ -50,6 +50,7 @@
             <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goAlumnos()">Alumnos</button>
             <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goMaterias()">Materias</button>
             <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goAdmins()">Administradores</button>
+            <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goInfo()">Informacion Personal</button>
             <button type="button" class="btn btn-primary bg-secondary rounded-3 mb-2 mb-lg-0 ml-2" (click)="goBuscar()">Buscar</button>
           </div>
 
