--- a/FrontEnd/SysAcad/src/app/components/administrador/Alum/add-update-alumno/add-update-alumno.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/Alum/add-update-alumno/add-update-alumno.component.html
@@ -23,31 +23,30 @@
           <div class="mb-2">
             <label for="mail" class="form-label">Email:</label>
             <input formControlName="mail" type="email" id="mail" class="form-control">
-            <!-- Mensaje de error para el email -->
             <small *ngIf="form.get('mail')?.errors?.['email']">El formato del email no es válido.</small>
           </div>
           <!-- Campo: Dirección -->
           <div class="mb-2">
             <label for="direccion" class="form-label">Dirección:</label>
             <input formControlName="direccion" type="text" id="direccion" class="form-control">
-            <!-- Mensaje de error para la dirección -->
             <small *ngIf="form.get('direccion')?.errors?.['pattern']" class="fw-bold fs-6">La dirección debe ser en formato "Calle 123".</small>
+          </div>
+          <!-- Campo: usuario -->
+          <div class="mb-2">
+            <label for="usuario" class="form-label">Usuario:</label>
+            <input formControlName="usuario" type="text" id="usuario" class="form-control">
+          </div>
+          <!-- Campo: Contraseña -->
+          <div class="mb-2" *ngIf="id === 0">
+            <label for="password" class="form-label">Password:</label>
+            <input formControlName="password" type="password" id="password" class="form-control">
           </div>
           <!-- Campo: Fecha de Nacimiento -->
           <div class="mb-2">
             <label for="fecha_n" class="form-label">Fecha de Nacimiento:</label>
             <input formControlName="fecha_n" type="date" id="fecha_n" class="form-control">
           </div>
-          <!-- Campo: Usuario -->
-          <div class="mb-2">
-            <label for="usuario" class="form-label">Usuario:</label>
-            <input formControlName="usuario" type="text" id="usuario" class="form-control">
-          </div>
-          <!-- Campo: Contraseña -->
-          <div class="mb-2">
-            <label for="password" class="form-label">Contraseña:</label>
-            <input formControlName="password" type="password" id="password" class="form-control">
-          </div>
+
           <!-- Campo: Plan -->
           <div class="d-flex justify-content-center align-items-center mt-2 mb-2">
             <label for="plan" class="form-label mr-2">Plan:</label>
@@ -60,23 +59,16 @@
             </select>
           </div>
           <!-- Botones de acción -->
-          <div class="row mt-2 text-center">
+          <div class="d-flex justify-content-center mt-2">
             <!-- Botón: Volver -->
-            <div class="col-6">
-              <button (click)="volver()" type="button" class="btn btn-secondary btn-sm m-2">Volver</button>
-            </div>
+            <button (click)="volver()" type="button" class="btn btn-secondary btn-sm mx-2">Volver</button>
+            <!-- Botón: Cambiar Contraseña (solo al editar) -->
+            <button *ngIf="id !== 0" type="button" class="btn btn-light btn-sm mx-2" (click)="goToChangePassword()">Cambiar Contraseña</button>
             <!-- Botón: Aceptar -->
-            <div class="col-6">
-              <button [disabled]="form.invalid" type="submit" class="btn btn-light btn-sm m-2">Aceptar</button>
-            </div>
-            <!-- Nota: Campos obligatorios -->
-            <div>
-              <small class="ml-1 fw-bold">* Todos los campos son obligatorios.</small>
-            </div>
+            <button [disabled]="form.invalid" type="submit" class="btn btn-light btn-sm mx-2">Aceptar</button>
           </div>
         </form>
       </div>
     </div>
   </div>
 </div>
-  
