add_function_change_pass_whit_rol

--- a/FrontEnd/SysAcad/src/app/components/alumnos/informacion/informacion.component.html
+++ b/FrontEnd/SysAcad/src/app/components/alumnos/informacion/informacion.component.html
@@ -54,6 +54,7 @@
       <!-- Botón para ver las inscripciones -->
       <div class="d-flex justify-content-center mt-3">
         <div>
+          <button  type="button" class="btn btn-light ml-2" (click)="goToChangePassword()">Cambiar Contraseña</button>
           <button (click)="verInscripciones(alumno?.id)" class="btn btn-light ml-2">Ver inscripciones</button>
         </div>
       </div>
