add_error_message

--- a/FrontEnd/SysAcad/src/app/components/changepassword/changepassword.component.html
+++ b/FrontEnd/SysAcad/src/app/components/changepassword/changepassword.component.html
@@ -3,6 +3,10 @@
     <div class="modal-content" style="background-color: #375a7f; border-radius: 0.25rem; border: none;">
       <div class="card-header text-center text-white">Cambiar Contraseña</div>
       <div class="card-body text-white pt-1">
+        <!-- Recuadro de error -->
+        <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
+          {{ errorMessage }}
+        </div>
         <form [formGroup]="form" (ngSubmit)="changePassword()">
           <!-- Contraseña Actual (solo para alumnos) -->
           <div class="mb-2" *ngIf="role === 'alumno'">
