--- a/FrontEnd/SysAcad/src/app/components/administrador/changeadmin/changeadmin.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/changeadmin/changeadmin.component.html
@@ -3,6 +3,9 @@
       <div class="modal-content" style="background-color: #375a7f; border-radius: 0.25rem; border: none;">
         <div class="card-header text-center text-white">Cambiar Contraseña</div>
         <div class="card-body text-white pt-1">
+        <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
+            {{ errorMessage }}
+        </div>
           <form [formGroup]="form" (ngSubmit)="changePassword()">
             <!-- Nueva Contraseña -->
             <div class="mb-2">
