--- a/FrontEnd/SysAcad/src/app/components/administrador/admin/add-update-admin/add-update-admin.component.html
+++ b/FrontEnd/SysAcad/src/app/components/administrador/admin/add-update-admin/add-update-admin.component.html
@@ -47,6 +47,7 @@
           <div class="mb-2" *ngIf="id === 0">
             <label for="password" class="form-label">Contraseña:</label>
             <input formControlName="password" type="password" id="password" class="form-control">
+          </div>
           <!-- Botones de acción -->
           <div class="d-flex justify-content-center mt-2">
             <!-- Botón: Volver -->
